Revert "Adding 3d pawns using a perspective camera to render it"
This reverts commit 0dbb3f38c2307fbb39c97a9f18e8f9646f1b4ee0.

--- a/settings/project.json
+++ b/settings/project.json
@@ -1,15 +1,11 @@
 {
+  "start-scene": "current",
   "group-list": [
-    "default",
-    "Pawn"
+    "default"
   ],
   "collision-matrix": [
     [
       true
-    ],
-    [
-      false,
-      false
     ]
   ],
   "excluded-modules": [],
@@ -20,19 +16,19 @@
   "fit-height": true,
   "use-project-simulator-setting": false,
   "simulator-orientation": false,
-  "use-customize-simulator": true,
+  "use-customize-simulator": false,
   "simulator-resolution": {
-    "height": 640,
-    "width": 960
+    "width": 960,
+    "height": 640
   },
   "assets-sort-type": "name",
   "facebook": {
+    "enable": false,
     "appID": "",
-    "audience": {
+    "live": {
       "enable": false
     },
-    "enable": false,
-    "live": {
+    "audience": {
       "enable": false
     }
   }
